--- a/category.html
+++ b/category.html
@@ -46,17 +46,76 @@
       </div>
     </div>
     <div id="side_cate">
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
-      <a href="#"> nam</a>
+      <div id="side_cate_nav">
+        <div class="side_cate_nav_item noselect">
+          <div
+            onclick="openSubNav(this.parentElement)"
+            class="side_cate_nav_item_header"
+          >
+            Bộ sưu tập thời trang
+          </div>
+          <div class="side_cate_nav_sub_item">
+            Bộ sưu tập thời trang theo mùa
+          </div>
+          <div class="side_cate_nav_sub_item">
+            Bộ sưu tập thời trang theo vùng
+          </div>
+          <div class="side_cate_nav_sub_item">
+            Bộ sưu tập thời trang từng thời kỳ
+          </div>
+          <div class="side_cate_nav_sub_item">
+            Bộ sưu tập thời trang theo màu
+          </div>
+        </div>
+        <div class="side_cate_nav_item noselect">
+          <div
+            onclick="openSubNav(this.parentElement)"
+            class="side_cate_nav_item_header"
+          >
+            Hướng
+          </div>
+          <div class="side_cate_nav_sub_item">Đông</div>
+          <div class="side_cate_nav_sub_item">Nam</div>
+          <div class="side_cate_nav_sub_item">Tây</div>
+          <div class="side_cate_nav_sub_item">Bắc</div>
+        </div>
+        <div class="side_cate_nav_item noselect">
+          <div
+            onclick="openSubNav(this.parentElement)"
+            class="side_cate_nav_item_header"
+          >
+            Hướng
+          </div>
+          <div class="side_cate_nav_sub_item">Đông</div>
+          <div class="side_cate_nav_sub_item">Nam</div>
+          <div class="side_cate_nav_sub_item">Tây</div>
+          <div class="side_cate_nav_sub_item">Bắc</div>
+        </div>
+        <div class="side_cate_nav_item noselect">
+          <div
+            onclick="openSubNav(this.parentElement)"
+            class="side_cate_nav_item_header"
+          >
+            Hướng
+          </div>
+          <div class="side_cate_nav_sub_item">Đông</div>
+          <div class="side_cate_nav_sub_item">Nam</div>
+          <div class="side_cate_nav_sub_item">Tây</div>
+          <div class="side_cate_nav_sub_item">Bắc</div>
+        </div>
+        <div class="side_cate_nav_item noselect">
+          <div
+            onclick="openSubNav(this.parentElement)"
+            class="side_cate_nav_item_header"
+          >
+            Hướng
+          </div>
+          <div class="side_cate_nav_sub_item">Đông</div>
+          <div class="side_cate_nav_sub_item">Nam</div>
+          <div class="side_cate_nav_sub_item">Tây</div>
+          <div class="side_cate_nav_sub_item">Bắc</div>
+        </div>
+      </div>
     </div>
     <div id="main_cate">
       <div id="main_cate_header">Quần áo bé trai</div>
