--- a/category.html
+++ b/category.html
@@ -47,6 +47,7 @@
     </div>
     <div id="side_cate">
       <div id="side_cate_nav">
+        <div class="side_cate_nav_header noselect">Menu</div>
         <div class="side_cate_nav_item noselect">
           <div
             onclick="openSubNav(this.parentElement)"
@@ -54,143 +55,206 @@
           >
             Bộ sưu tập thời trang
           </div>
-          <div class="side_cate_nav_sub_item">
+          <a href="product.html" class="side_cate_nav_sub_item">
             Bộ sưu tập thời trang theo mùa
-          </div>
-          <div class="side_cate_nav_sub_item">
+          </a>
+          <a href="product.html" class="side_cate_nav_sub_item">
             Bộ sưu tập thời trang theo vùng
-          </div>
-          <div class="side_cate_nav_sub_item">
+          </a>
+          <a href="product.html" class="side_cate_nav_sub_item">
             Bộ sưu tập thời trang từng thời kỳ
-          </div>
-          <div class="side_cate_nav_sub_item">
+          </a>
+          <a href="product.html" class="side_cate_nav_sub_item">
             Bộ sưu tập thời trang theo màu
-          </div>
+          </a>
         </div>
         <div class="side_cate_nav_item noselect">
           <div
             onclick="openSubNav(this.parentElement)"
             class="side_cate_nav_item_header"
           >
-            Hướng
+            Quần áo bé trai
           </div>
-          <div class="side_cate_nav_sub_item">Đông</div>
-          <div class="side_cate_nav_sub_item">Nam</div>
-          <div class="side_cate_nav_sub_item">Tây</div>
-          <div class="side_cate_nav_sub_item">Bắc</div>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo sơ-mi</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo thun</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo khoác</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo len</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Quần sooc</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Quần dài</a>
         </div>
         <div class="side_cate_nav_item noselect">
           <div
             onclick="openSubNav(this.parentElement)"
             class="side_cate_nav_item_header"
           >
-            Hướng
+            Quần áo bé gái
           </div>
-          <div class="side_cate_nav_sub_item">Đông</div>
-          <div class="side_cate_nav_sub_item">Nam</div>
-          <div class="side_cate_nav_sub_item">Tây</div>
-          <div class="side_cate_nav_sub_item">Bắc</div>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo đầm</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo thun</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo khoác</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Áo len</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Quần sooc</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Quần dài</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Chân váy</a>
         </div>
         <div class="side_cate_nav_item noselect">
           <div
             onclick="openSubNav(this.parentElement)"
             class="side_cate_nav_item_header"
           >
-            Hướng
+            Quần áo trẻ sơ sinh
           </div>
-          <div class="side_cate_nav_sub_item">Đông</div>
-          <div class="side_cate_nav_sub_item">Nam</div>
-          <div class="side_cate_nav_sub_item">Tây</div>
-          <div class="side_cate_nav_sub_item">Bắc</div>
+          <a href="product.html" class="side_cate_nav_sub_item">Bộ thun</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Đầm váy</a>
+          <a href="product.html" class="side_cate_nav_sub_item">áo khoác</a>
         </div>
         <div class="side_cate_nav_item noselect">
           <div
             onclick="openSubNav(this.parentElement)"
             class="side_cate_nav_item_header"
           >
-            Hướng
+            Phụ kiện
           </div>
-          <div class="side_cate_nav_sub_item">Đông</div>
-          <div class="side_cate_nav_sub_item">Nam</div>
-          <div class="side_cate_nav_sub_item">Tây</div>
-          <div class="side_cate_nav_sub_item">Bắc</div>
+          <a href="product.html" class="side_cate_nav_sub_item">Nón</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Khẩu trang</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Vòng tay</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Đồng hồ</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Găng tay</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Tất</a>
+          <a href="product.html" class="side_cate_nav_sub_item">Giày</a>
+        </div>
+      </div>
+      <div class="side_cate_option">
+        <div class="side_cate_nav_header noselect">Giá</div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="price" id="" />
+          <label for="html">Dưới 200.000 vnđ</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="price" id="" />
+          <label for="html">Từ 200.000 vnđ - 300.000 vnđ</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="price" id="" />
+          <label for="html">Từ 300.000 vnđ - 500.000 vnđ</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="price" id="" />
+          <label for="html">Từ 500.000 vnđ - 1.000.000 vnđ</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="price" id="" />
+          <label for="html">Trên 1.000.000 vnđ</label><br />
+        </div>
+      </div>
+      <div class="side_cate_option">
+        <div class="side_cate_nav_header noselect">Kích thước</div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="weight" id="" />
+          <label for="html">6M - 9M - 5KG</label><br />
+          <input type="radio" name="weight" id="" />
+          <label for="html">6M - 9M - 10KG</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="weight" id="" />
+          <label for="html">9M - 1Y - 8KG</label><br />
+          <input type="radio" name="weight" id="" />
+          <label for="html">9M - 1Y - 12KG</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="weight" id="" />
+          <label for="html">1Y - 2Y - 12KG</label><br />
+          <input type="radio" name="weight" id="" />
+          <label for="html">1Y - 2Y - 18KG</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="weight" id="" />
+          <label for="html">2Y - 3Y - 15KG</label><br />
+          <input type="radio" name="weight" id="" />
+          <label for="html">2Y - 3Y - 20KG</label><br />
+        </div>
+        <div class="side_cate_option_item noselect">
+          <input type="radio" name="weight" id="" />
+          <label for="html">3Y - 5Y - 25KG</label><br />
+          <input type="radio" name="weight" id="" />
+          <label for="html">3Y - 5Y - 35KG</label><br />
         </div>
       </div>
     </div>
     <div id="main_cate">
       <div id="main_cate_header">Quần áo bé trai</div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
       <div class="main_cate_item">
-        <img src="./ao-thun-be-trai.jpg" alt="" />
+        <a href="product.html"><img src="./ao-thun-be-trai.jpg" alt="" /></a>
         <div>Áo thun bé trai</div>
         <div>420.000 vnd</div>
       </div>
@@ -236,6 +300,7 @@
           <a href="https://www.youtube.com/"
             ><img src="./Youtube-Icon.png" alt=""
           /></a>
+          <a href="https://zalo.me/"><img src="./Zalo-Icon.png" alt="" /></a>
         </div>
       </div>
     </div>
