--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
       <div class="main_section">
         <div class="main_section_header">Thời trang picnic</div>
         <div class="main_section_content">
-          <div class="main_section_content_item">
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-khung-long-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./quan-dai-kaki-be-gai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-thun-ke-sac-be-trai.jpg" alt="" />
-          </div>
-          <div class="main_section_content_item">
+          </a>
+          <a href="product.html" class="main_section_content_item">
             <img src="./ao-khoac-tho-ni-be-trai.jpg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
       <div class="main_section">
@@ -210,6 +210,7 @@
           <a href="https://www.youtube.com/"
             ><img src="./Youtube-Icon.png" alt=""
           /></a>
+          <a href="https://zalo.me/"><img src="./Zalo-Icon.png" alt="" /></a>
         </div>
       </div>
     </div>
