--- a/s.html
+++ b/s.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="product.css" />
     <script src="index.js" defer></script>
     <title>SCP Shop</title>
   </head>
@@ -36,25 +36,35 @@
         </div>
       </div>
       <div id="top_nav">
-        <a href="index.html" class="top_nav_link">Trang chủ</a>
-        <a href="#" class="top_nav_link" id="current">Giới thiệu</a>
-        <a href="#" class="top_nav_link">Khuyến mãi</a>
-        <a href="category.html" class="top_nav_link">Sản phẩm</a>
-        <a href="#" class="top_nav_link">Hỗ trợ</a>
-        <a href="#" class="top_nav_link">Chính sách</a>
-        <a href="#" class="top_nav_link">Tuyển dụng</a>
+        <a href="#" class="top_nav_link" id="current">Trang chủ</a>
+        <a href="about.html" class="top_nav_link">Giới thiệu</a>
+        <a href="about.html" class="top_nav_link">Khuyến mãi</a>
+        <a href="product.html" class="top_nav_link">Sản phẩm</a>
+        <a href="about.html" class="top_nav_link">Hỗ trợ</a>
+        <a href="about.html" class="top_nav_link">Chính sách</a>
+        <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
-    <div id="main_panel">
-      <div id="main_text">
-        <div class="main_text_heading">Giới thiệu về nhóm 7</div>
-        <div>Đề tài: Thời trang trẻ em</div>
-        <div>
-          Thành viên: <br />- Trần Đức Nhật Nam - MSSV: 2001206925<br />- Kiều
-          Đạo Nhất San - MSSV: 2001206925 <br />- Thập Anh Hào - MSSV:
-          2001206925
-        </div>
-      </div>
+    <div id="side_nav">
+      <a href="category.html">Bộ sưu tập thời trang</a>
+      <a href="category.html">Quần áo bé trai</a>
+      <a href="category.html">Quần áo bé gái</a>
+      <a href="category.html">Quần áo trẻ sơ sinh</a>
+      <a href="category.html">Trang sức</a>
+      <a href="category.html">Phụ kiện</a>
+    </div>
+    <div id="main_cate">
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./ao-thun-be-trai.jpg" alt="" /></div>
+      <div><img src="./Facebook-Icon.png" alt="" style="width: 100%" /></div>
     </div>
     <div id="footer">
       <div class="footer_item">
@@ -69,33 +79,19 @@
         <div class="footer_item_text">Email: TenBrotherHao@scp.com</div>
       </div>
       <div class="footer_item">
-        <div class="footer_item_heading">Về SCP Shop</div>
-        <div class="footer_item_text">Giới thiệu về shop</div>
-        <div class="footer_item_text">Chính sách hoạt động</div>
+        <div class="footer_item_heading">Thông tin về SCP Shop</div>
+        <div class="footer_item_text">Giới thiệu</div>
+        <div class="footer_item_text">Điều khoản thành viên</div>
+        <div class="footer_item_text">Chính sách bảo mật</div>
         <div class="footer_item_text">Tuyển dụng nhân viên</div>
-        <div class="footer_item_text">Chăm sóc khách hàng</div>
+        <div class="footer_item_text">Danh sách cửa hàng</div>
       </div>
       <div class="footer_item">
         <div class="footer_item_heading">Liên hệ</div>
-        <div class="footer_item_text">Giới thiệu về shop</div>
-        <div class="footer_item_text">Chính sách hoạt động</div>
-        <div class="footer_item_text">Tuyển dụng nhân viên</div>
         <div class="footer_item_text">Chăm sóc khách hàng</div>
-      </div>
-      <div class="footer_item">
-        <div class="footer_item_heading">Kết nối với chúng tôi</div>
-        <div id="social_button">
-          <a href="https://www.facebook.com/"
-            ><img src="./Facebook-Icon.png" alt=""
-          /></a>
-          <a href="https://twitter.com/"
-            ><img src="./Twitter-Icon.png" alt=""
-          /></a>
-          <a href="https://www.youtube.com/"
-            ><img src="./Youtube-Icon.png" alt=""
-          /></a>
-          <a href="https://zalo.me/"><img src="./Zalo-Icon.png" alt="" /></a>
-        </div>
+        <div class="footer_item_text">Hỗ trợ nhân viên</div>
+        <div class="footer_item_text">Khiếu nại</div>
+        <div class="footer_item_text">Đường dây nóng: 0366764749</div>
       </div>
     </div>
   </body>
