--- a/product.html
+++ b/product.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="signup.css" />
-    <script src="index.js"></script>
-    <script src="signup.js"></script>
+    <link rel="stylesheet" href="product.css" />
+    <script src="index.js" defer></script>
     <title>SCP Shop</title>
   </head>
   <body onload="fade()" id="bd">
@@ -31,7 +36,7 @@
         </div>
       </div>
       <div id="top_nav">
-        <a href="index.html" class="top_nav_link">Trang chủ</a>
+        <a href="#" class="top_nav_link" id="current">Trang chủ</a>
         <a href="about.html" class="top_nav_link">Giới thiệu</a>
         <a href="about.html" class="top_nav_link">Khuyến mãi</a>
         <a href="category.html" class="top_nav_link">Sản phẩm</a>
@@ -40,47 +45,24 @@
         <a href="about.html" class="top_nav_link">Tuyển dụng</a>
       </div>
     </div>
-    <form id="main_form">
-      <div class="main_form_header">Đăng kí</div>
-      <input type="text" placeholder="Nhập tài khoản" class="text_input" />
-      <input type="email" placeholder="Nhập email" class="text_input" />
-      <input type="password" placeholder="Nhập mật khẩu" class="text_input" />
-      <input
-        type="password"
-        placeholder="Nhập lại mật khẩu"
-        class="text_input"
-      />
-      <input type="text" placeholder="Nhập họ tên" class="text_input" />
-      <input
-        type="text"
-        placeholder="Nhập ngày sinh"
-        onfocus="(this.type='date')"
-        onfocusout="(this.type='text')"
-        id="date_input"
-      />
-      <input type="text" placeholder="Nhập địa chỉ" class="text_input" />
-      <input type="text" placeholder="Nhập số điện thoại" class="text_input" />
-      <div class="checkbox_area" id="policy_checkbox_area">
-        <input type="checkbox" />
-        <div>Tôi chấp nhận chính sách thành viên</div>
-      </div>
-      <div onclick="login()" class="button noselect" id="sup_button">
-        Đăng ký
-      </div>
-    </form>
-    <form id="second_form">
-      <div class="second_form_header">Đăng nhập</div>
-      <input type="text" placeholder="Nhập tài khoản" class="text_input" />
-      <input type="password" placeholder="Nhập mật khẩu" class="text_input" />
-      <div onclick="login()" class="button noselect">Đăng nhập</div>
-      <div id="form_text">Đăng nhập bằng cách khác</div>
-      <div id="social_button">
-        <a href=""><img src="./Facebook-Icon.png" alt="" /></a>
-        <a href=""><img src="./Google-Icon.png" alt="" /></a>
-        <a href=""><img src="./Twitter-Icon.png" alt="" /></a>
-        <a href=""><img src="./Zalo-Icon.png" alt="" /></a>
-      </div>
-    </form>
+    <div id="side_nav">
+      <a href="category.html">Bộ sưu tập thời trang</a>
+      <a href="category.html">Quần áo bé trai</a>
+      <a href="category.html">Quần áo bé gái</a>
+      <a href="category.html">Quần áo trẻ sơ sinh</a>
+      <a href="category.html">Trang sức</a>
+      <a href="category.html">Phụ kiện</a>
+    </div>
+    <div id="product_img"><img src="./ao-thun-7-mau.jpg" alt="" /></div>
+    <div id="product_detail">
+      <div>Tên sản phẩm</div>
+      <div>Giá</div>
+      <div>Tình trạng hàng hóa</div>
+      <div>Kích thước</div>
+      <div>Màu sắc</div>
+      <button>Mua ngay</button>
+      <button>Thêm vào giỏ hàng</button>
+    </div>
     <div id="footer">
       <div class="footer_item">
         <div class="footer_item_heading">
