--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="media-screen.css" />
     <script src="index.js" defer></script>
     <title>SCP Shop</title>
   </head>
@@ -31,8 +30,10 @@
           <a href="cart.html" id="cart_button"
             ><img src="./Cart-Icon.png" id="cart_button_img"
           /></a>
-          <a href="signup.html" id="signup_button">ĐĂNG KÝ</a>
-          <a href="signup.html" id="login_button">ĐĂNG NHẬP</a>
+          <a href="signup.html" class="pc_button" id="signup_button">ĐĂNG KÝ</a>
+          <a href="signup.html" class="pc_button" id="login_button"
+            >ĐĂNG NHẬP</a
+          >
         </div>
       </div>
       <div id="top_nav">
@@ -174,15 +175,11 @@
 
     <div id="footer">
       <div class="footer_item">
-        <div class="footer_item_heading">
-          Công ty TNHH Marshall, Carter và Dark
-        </div>
-        <div class="footer_item_text">
-          Địa chỉ trụ sở: 420/69 Ngụy Như Kon Tum, Phường 13, Thành phố Thủ Đức,
-          Thành phố Hồ Chí Minh
-        </div>
-        <div class="footer_item_text">SĐT: 0366764749</div>
-        <div class="footer_item_text">Email: TenBrotherHao@scp.com</div>
+        <div class="footer_item_heading">Nhóm 7</div>
+        <div class="footer_item_text">Thành viên:</div>
+        <div class="footer_item_text">Trần Đức Nhật Nam - MSSV: 2001206925</div>
+        <div class="footer_item_text">Kiều Đạo Nhất San - MSSV: 2001206997</div>
+        <div class="footer_item_text">Thập Anh Hào - MSSV: 2001206982</div>
       </div>
       <div class="footer_item">
         <div class="footer_item_heading">Về SCP Shop</div>
