--- a/product.html
+++ b/product.html
@@ -31,8 +31,10 @@
           <a href="cart.html" id="cart_button"
             ><img src="./Cart-Icon.png" id="cart_button_img"
           /></a>
-          <a href="signup.html" id="signup_button">ĐĂNG KÝ</a>
-          <a href="signup.html" id="login_button">ĐĂNG NHẬP</a>
+          <a href="signup.html" class="pc_button" id="signup_button">ĐĂNG KÝ</a>
+          <a href="signup.html" class="pc_button" id="login_button"
+            >ĐĂNG NHẬP</a
+          >
         </div>
       </div>
       <div id="top_nav">
