--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
         <div onclick="moveBanner(3, this)" class="option"></div>
       </div>
     </div>
-    <div id="side_nav">
-      <a href="category.html">Bộ sưu tập thời trang</a>
-      <a href="category.html">Quần áo bé trai</a>
-      <a href="category.html">Quần áo bé gái</a>
-      <a href="category.html">Quần áo trẻ sơ sinh</a>
-      <a href="category.html">Trang sức</a>
-      <a href="category.html">Phụ kiện</a>
+    <div id="super_side_nav">
+      <div id="side_nav">
+        <a href="category.html">Bộ sưu tập thời trang</a>
+        <a href="category.html">Quần áo bé trai</a>
+        <a href="category.html">Quần áo bé gái</a>
+        <a href="category.html">Quần áo trẻ sơ sinh</a>
+        <a href="category.html">Trang sức</a>
+        <a href="category.html">Phụ kiện</a>
+      </div>
     </div>
     <div id="main_panel">
       <div class="main_section">
