--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,10 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="signup.css" />
     <link rel="stylesheet" href="cart.css" />
