--- a/cart.html
+++ b/cart.html
@@ -84,15 +84,11 @@
     </div>
     <div id="footer">
       <div class="footer_item">
-        <div class="footer_item_heading">
-          Công ty TNHH Marshall, Carter và Dark
-        </div>
-        <div class="footer_item_text">
-          Địa chỉ trụ sở: 420/69 Ngụy Như Kon Tum, Phường 13, Thành phố Thủ Đức,
-          Thành phố Hồ Chí Minh
-        </div>
-        <div class="footer_item_text">SĐT: 0366764749</div>
-        <div class="footer_item_text">Email: TenBrotherHao@scp.com</div>
+        <div class="footer_item_heading">Nhóm 7</div>
+        <div class="footer_item_text">Thành viên:</div>
+        <div class="footer_item_text">Trần Đức Nhật Nam - MSSV: 2001206925</div>
+        <div class="footer_item_text">Kiều Đạo Nhất San - MSSV: 2001206997</div>
+        <div class="footer_item_text">Thập Anh Hào - MSSV: 2001206982</div>
       </div>
       <div class="footer_item">
         <div class="footer_item_heading">Về SCP Shop</div>
